add yandex target index.html

--- a/app/index.html
+++ b/app/index.html
@@ -930,7 +930,7 @@
 
 <div class="d-none">
 
-	<form class="popup-form zoom-anim-dialog form white-bg" id="take-information">
+	<form class="popup-form zoom-anim-dialog form white-bg" id="take-information" onsubmit="ym(57525343,'reachGoal','popup form fixed')">
 		<div class="success">
 			<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
 		</div>
