add new houses and index.html

--- a/app/houses.html
+++ b/app/houses.html
@@ -86,6 +86,8 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 <noscript><div><img src="https://mc.yandex.ru/watch/57525343" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
+<script src="//code-ya.jivosite.com/widget/ztIhj2B2eb" async></script>
+
 </head>
 
 <body>
