--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,8 @@
 	<noscript><div><img src="https://mc.yandex.ru/watch/57525343" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 
+	<script src="//code-ya.jivosite.com/widget/ztIhj2B2eb" async></script>
+
 </head>
 
 <body>
