compress houses images

--- a/app/houses.html
+++ b/app/houses.html
@@ -14,15 +14,17 @@
 	<link rel="stylesheet" href="title.styles.css?v=2.4">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=4.3">
+	<link rel="stylesheet" href="css/main.min.css?v=2.5">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=4.3"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=2.7"></script>
 	<!-- CUSTOM JS CODE -->
 
-	<link rel="stylesheet" href="styles.css?v=4.2">
 	<script src="adaptiveimage.js"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script type="text/javascript" src="title.js"></script>
+	<link rel="stylesheet" href="styles.css?v=4.2">
 	
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -277,17 +279,17 @@
 
 											<div class="item-outer">
 												<div class="item">
-													<a class="image fancybox" href="img/houses/people_1/scheme.jpg" data-fancybox="house-people_1">
+													<a class="image fancybox" href="img/houses/people_1/1.jpg" data-fancybox="house-people_1">
 														<div class="house-price"><span>2.45 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_1/scheme.jpg" alt="Дом 101кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/people_1/sm.jpg" alt="Дом 101кв. м."></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_1/2.jpg" data-fancybox="house-people_1"></a>
+														<a class="image fancybox" href="img/houses/people_1/2.jpg" data-fancybox="house-people_1"></a>
 														<a class="image fancybox" href="img/houses/people_1/3.jpg" data-fancybox="house-people_1"></a>
 														<a class="image fancybox" href="img/houses/people_1/4.jpg" data-fancybox="house-people_1"></a>
 														<a class="image fancybox" href="img/houses/people_1/5.jpg" data-fancybox="house-people_1"></a>
-														<a class="image fancybox" href="img/houses/people_1/scheme.jpg" data-fancybox="house-people_1"></a> -->
+														<a class="image fancybox" href="img/houses/people_1/scheme.jpg" data-fancybox="house-people_1"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 90,04кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 84,76кв. м.</p></div></div>
@@ -299,7 +301,7 @@
 													<a class="image fancybox" href="img/houses/people_2/scheme.jpg" data-fancybox="house-people_2">
 														<div class="house-price"><span>2.99 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_2/scheme.jpg" alt="Дом 133кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg" alt="Дом 133кв. м"></span>
 													</a>
 													<div class="d-none">
 														<!-- <a class="image fancybox" href="img/houses/people_2/2.jpg" data-fancybox="house-people_2"></a>
@@ -318,7 +320,7 @@
 													<a class="image fancybox" href="img/houses/people_3/scheme.jpg" data-fancybox="house-people_3">
 														<div class="house-price"><span>3.55 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_3/scheme.jpg" alt="Дом 166кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/people_3/sm.jpg" alt="Дом 166кв. м"></span>
 													</a>
 													<div class="d-none">
 														<!-- <a class="image fancybox" href="img/houses/people_3/2.jpg" data-fancybox="house-people_3"></a>
@@ -337,7 +339,7 @@
 													<a class="image fancybox" href="img/houses/people_4/scheme.jpg" data-fancybox="house-people_4">
 														<div class="house-price"><span>4.65 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_4/scheme.jpg" alt="Дом 166кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/people_4/sm.jpg" alt="Дом 166кв. м"></span>
 													</a>
 													<div class="d-none">
 														<!-- <a class="image fancybox" href="img/houses/people_4/2.jpg" data-fancybox="house-people_4"></a>
@@ -392,7 +394,7 @@
 													<a class="image fancybox" href="img/houses/classic_1/1.jpg" data-fancybox="house-classic_1">
 														<div class="house-price"><span>3.48 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_1/1.jpg" alt="Дом 101кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/classic_1/sm.jpg" alt="Дом 101кв. м."></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/classic_1/2.jpg" data-fancybox="house-classic_1"></a>
@@ -411,7 +413,7 @@
 													<a class="image fancybox" href="img/houses/classic_2/1.jpg" data-fancybox="house-classic_2">
 														<div class="house-price"><span>3.99 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_2/1.jpg" alt="Дом 133кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/classic_2/sm.jpg" alt="Дом 133кв. м"></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/classic_2/2.jpg" data-fancybox="house-classic_2"></a>
@@ -430,7 +432,7 @@
 													<a class="image fancybox" href="img/houses/classic_3/1.jpg" data-fancybox="house-classic_3">
 														<div class="house-price"><span>4.49 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_3/1.jpg" alt="Дом 166кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/classic_3/sm.jpg" alt="Дом 166кв. м"></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/classic_3/2.jpg" data-fancybox="house-classic_3"></a>
@@ -485,7 +487,7 @@
 													<a class="image fancybox" href="img/houses/standart_1/1.jpg" data-fancybox="house-standart_1">
 														<div class="house-price"><span>3.14 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/standart_1/1.jpg" alt="Дом 102кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/standart_1/sm.jpg" alt="Дом 102кв. м"></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/standart_1/2.jpg" data-fancybox="house-standart_1"></a>
@@ -504,7 +506,7 @@
 													<a class="image fancybox" href="img/houses/standart_2/1.jpg" data-fancybox="house-standart_2">
 														<div class="house-price"><span>3.79 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/standart_2/1.jpg" alt="Дом 134кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/standart_2/sm.jpg" alt="Дом 134кв. м."></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/standart_2/2.jpg" data-fancybox="house-standart_2"></a>
@@ -523,7 +525,7 @@
 													<a class="image fancybox" href="img/houses/standart_3/1.jpg" data-fancybox="house-standart_3">
 														<div class="house-price"><span>4.24 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/standart_3/1.jpg" alt="Дом 166кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/standart_3/sm.jpg" alt="Дом 166кв. м."></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/standart_3/2.jpg" data-fancybox="house-standart_3"></a>
@@ -577,7 +579,7 @@
 													<a class="image fancybox" href="img/houses/texas_1/1.jpg" data-fancybox="house-texas_1">
 														<div class="house-price"><span>3.34 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/texas_1/1.jpg" alt="Дом 102кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/texas_1/sm.jpg" alt="Дом 102кв. м"></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/texas_1/scheme.jpg" data-fancybox="house-texas_1"></a>
@@ -592,7 +594,7 @@
 													<a class="image fancybox" href="img/houses/texas_2/1.jpg" data-fancybox="house-texas_2">
 														<div class="house-price"><span>4.04 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/texas_2/1.jpg" alt="Дом 134кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/texas_2/sm.jpg" alt="Дом 134кв. м."></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/texas_2/scheme.jpg" data-fancybox="house-texas_2"></a>
@@ -607,7 +609,7 @@
 													<a class="image fancybox" href="img/houses/texas_3/1.jpg" data-fancybox="house-texas_3">
 														<div class="house-price"><span>4.54 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/texas_3/1.jpg" alt="Дом 166кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/texas_3/sm.jpg" alt="Дом 166кв. м."></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/texas_3/scheme.jpg" data-fancybox="house-texas_3"></a>
