edit houses, add new houses images

--- a/app/houses.html
+++ b/app/houses.html
@@ -134,7 +134,7 @@
 
 						<div class="editable_block-11 widget-7 editorElement layer-type-widget">
 							<div class="body">
-								<div class="title"><h1 class="align-elem">Готовый дом по цене квартиры за 2-3 месяца! Ипотека!<br><span>Дома от 106 м<sup>2</sup> от 3.14 млн руб!</span></h1></div>
+								<div class="title"><h1 class="align-elem">Готовый дом по цене квартиры за 2-3 месяца! Ипотека!<br><span>Дома от 90 м<sup>2</sup> от 2.45 млн руб!</span></h1></div>
 								<div class="text">
 									<div class="layout column layout_8" >
 										<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget head-button" href="#take-consultation" ><span>Узнать варианты ипотечных программ</span></a>
@@ -304,11 +304,7 @@
 														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg" alt="Дом 133кв. м"></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_2/2.jpg" data-fancybox="house-people_2"></a>
-														<a class="image fancybox" href="img/houses/people_2/3.jpg" data-fancybox="house-people_2"></a>
-														<a class="image fancybox" href="img/houses/people_2/4.jpg" data-fancybox="house-people_2"></a>
-														<a class="image fancybox" href="img/houses/people_2/5.jpg" data-fancybox="house-people_2"></a>
-														<a class="image fancybox" href="img/houses/people_2/scheme.jpg" data-fancybox="house-people_2"></a> -->
+														<!-- <a class="image fancybox" href="img/houses/people_2/2.jpg" data-fancybox="house-people_2"></a> -->
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 120,54кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 117,02кв. м.</p></div></div>
@@ -323,11 +319,7 @@
 														<span class="img-convert img-cover"><img src="img/houses/people_3/sm.jpg" alt="Дом 166кв. м"></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_3/2.jpg" data-fancybox="house-people_3"></a>
-														<a class="image fancybox" href="img/houses/people_3/3.jpg" data-fancybox="house-people_3"></a>
-														<a class="image fancybox" href="img/houses/people_3/4.jpg" data-fancybox="house-people_3"></a>
-														<a class="image fancybox" href="img/houses/people_3/5.jpg" data-fancybox="house-people_3"></a>
-														<a class="image fancybox" href="img/houses/people_3/scheme.jpg" data-fancybox="house-people_3"></a> -->
+														<!-- <a class="image fancybox" href="img/houses/people_3/2.jpg" data-fancybox="house-people_3"></a> -->
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 150,19кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 146,67кв. м.</p></div></div>
@@ -342,11 +334,7 @@
 														<span class="img-convert img-cover"><img src="img/houses/people_4/sm.jpg" alt="Дом 166кв. м"></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_4/2.jpg" data-fancybox="house-people_4"></a>
-														<a class="image fancybox" href="img/houses/people_4/3.jpg" data-fancybox="house-people_4"></a>
-														<a class="image fancybox" href="img/houses/people_4/4.jpg" data-fancybox="house-people_4"></a>
-														<a class="image fancybox" href="img/houses/people_4/5.jpg" data-fancybox="house-people_4"></a>
-														<a class="image fancybox" href="img/houses/people_4/scheme.jpg" data-fancybox="house-people_4"></a> -->
+														<!-- <a class="image fancybox" href="img/houses/people_4/2.jpg" data-fancybox="house-people_4"></a> -->
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 169,15кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 165,63кв. м.</p></div></div>
