compress and throttle speed all pages, add jivosite all pages

--- a/app/blog-page-4.html
+++ b/app/blog-page-4.html
@@ -8,76 +8,23 @@
 	<title>&#10004;  Построить дом в Хабаровске под ключ по цене квартиры.</title> 
 	<meta name="description" content="Строительство домов под ключ в Хабаровске. ✔ Качественные дома   от 2,1 млн руб! ✔ Проекты и цены на любой вкус и бюджет. Гарантия на наши дома от 50 лет.  &#10004;  Мы продаем дома либо на вашем земельном участке либо вы можете выбрать один из наших земельных участков, расположенных в разных районах города!">
 	<meta name="keywords" content="Блог">
-	<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta name="msapplication-tap-highlight" content="no"/>
-	<meta name="format-detection" content="telephone=no">
-	<meta http-equiv="x-rim-auto-match" content="none">
-	<link rel="stylesheet" href="styles_articles_tpl.css">
-	<link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="designblock.scss.css">
-
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+	<link rel="stylesheet" href="title.styles.css?v=2.4">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="title.styles.css?v=2.8">
-	<link rel="stylesheet" href="css/main.min.css?v=2.8">
+	<link rel="stylesheet" href="css/main.min.css?v=2.5">
 	<!-- CUSOM CSS CODE -->
-
-	<link rel="stylesheet" href="s3_styles.scss.css">
-	<script src="jquery.min.js"></script>
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=2.9"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=2.7"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
-	<link rel='stylesheet' type='text/css' href='highslide.min.css'/>
-	<!--[if IE 6]>
-	<link rel='stylesheet' type='text/css' href='/shared/highslide-4.1.13/highslide-ie6.css'/>
-<![endif]-->
-	<!--[if lte IE 7 ]>
-	<link rel='stylesheet' type='text/css' href='/shared/highslide-4.1.13/style1_ie.css'/>
-<![endif]-->
-<script type='text/javascript' src='highslide-full.packed.js'></script>
-<script type='text/javascript'>
-	hs.graphicsDir = './shared/highslide-4.1.13/graphics/';
-	hs.outlineType = null;
-	hs.showCredits = false;
-hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кликните чтобы отменить',focusTitle:'Нажмите чтобы перенести вперёд',fullExpandTitle:'Увеличить',fullExpandText:'Полноэкранный',previousText:'Предыдущий',previousTitle:'Назад (стрелка влево)',nextText:'Далее',nextTitle:'Далее (стрелка вправо)',moveTitle:'Передвинуть',moveText:'Передвинуть',closeText:'Закрыть',closeTitle:'Закрыть (Esc)',resizeTitle:'Восстановить размер',playText:'Слайд-шоу',playTitle:'Слайд-шоу (пробел)',pauseText:'Пауза',pauseTitle:'Приостановить слайд-шоу (пробел)',number:'Изображение %1/%2',restoreTitle:'Нажмите чтобы посмотреть картинку, используйте мышь для перетаскивания. Используйте клавиши вперёд и назад'};</script>
-<script type='text/javascript' src='flowplayer-3.2.9.min.js'></script>
-<!-- 46b9544ffa2e5e73c3c971fe2ede35a5 -->
-<link rel='stylesheet' type='text/css' href='calendar.css' />
-<script type='text/javascript' src='ru.js'></script>
-<script type='text/javascript' src='cookie.js'></script>
-<script type='text/javascript' src='widgets.js@v=8'></script>
-<script type='text/javascript' src='calendar.packed.js'></script>
-<link href="jquery-ui.css" rel="stylesheet" type="text/css"/>
-<script src="jquery-ui.min.js" type="text/javascript"></script>
-<script src="jquery.ui.datepicker-ru.js"></script>
-<link rel="stylesheet" href="jquery.popover.css">
-<script src="jquery.popover.min.js" type="text/javascript"></script>
-<script src="s3.form.js" type="text/javascript"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-<script type="text/javascript" src="main.js"></script>
-
-<!--[if lt IE 10]> <script src="/g/libs/ie9-svg-gradient/0.0.1/ie9-svg-gradient.min.js"></script> <script src="/g/libs/jquery-placeholder/2.0.7/jquery.placeholder.min.js"></script> <script src="/g/libs/jquery-textshadow/0.0.1/jquery.textshadow.min.js"></script> <script src="/g/s3/misc/ie/0.0.1/ie.js"></script> <![endif]-->
-<!--[if lt IE 9]> <script src="/g/libs/html5shiv/html5.js"></script> <![endif]-->
-
-</head>
-
-<body>
-
-	<!--CoMagic-->
-	<script type="text/javascript">
-		(function ct_load_script() {
-			var ct = document.createElement('script'); ct.type = 'text/javascript';
-			ct.src = document.location.protocol+'//cc.calltracking.ru/phone.fa91b.9328.async.js?nc='+Math.floor(new Date().getTime()/300000);
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ct, s);
-		})();
-	</script>
-	<!--CoMagic-->  
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script type="text/javascript" src="title.js"></script>
+	<link rel="stylesheet" href="styles.css?v=4.2">
 	
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -85,16 +32,29 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 			m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
 		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-		ym(56755036, "init", {
+		ym(57525343, "init", {
 			clickmap:true,
 			trackLinks:true,
 			accurateTrackBounce:true,
 			webvisor:true
 		});
-		
 	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/56755036" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<noscript><div><img src="https://mc.yandex.ru/watch/57525343" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
+
+	<script src="//code-ya.jivosite.com/widget/ztIhj2B2eb" async></script>
+
+</head>
+
+<body>
+
+	<a href="#take-information" class="sticky-button open-form-button">
+		<div class="circle-phone">
+			<svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.864895 8.86842C2.80412 5.0745 5.67817 1.80212 8.42689 0.915413C9.05539 0.712669 9.7639 0.623007 10.3323 0.959222C12.5655 2.28022 17.6088 7.79563 19.0253 11.7192C19.2985 12.4758 19.2588 13.329 18.7978 13.9882C16.9842 16.5815 12.5598 16.8892 11.8876 19.211C11.4565 20.7002 20.3492 33.2349 26.9182 35.9267C28.0508 36.3908 29.3503 36.0486 30.0584 35.0502C31.4105 33.144 31.9838 30.5843 34.3778 29.2002C34.9181 28.8878 35.5416 28.8599 36.1005 29.1378C38.3629 30.2625 44.196 33.9368 46.5703 37.3279C47.158 38.1673 47.2314 39.2468 46.8049 40.1784C45.8376 42.291 43.7893 45.0211 40.8356 46.8208C40.2852 47.1562 39.6545 47.3417 39.01 47.3321C33.679 47.253 22.0779 43.4579 13.4006 34.7793C5.07941 25.852 -0.470642 11.4813 0.864895 8.86842Z" fill="#6DB925"/></svg>
+		</div>
+		<div class="circle first"></div>
+		<div class="circle second"></div>
+	</a>
 	
 	<div class="wrapper editorElement layer-type-wrapper" >
 		<div class="side-panel side-panel-46 widget-type-side_panel editorElement layer-type-widget widget-28" data-layers="['widget-4':['tablet-landscape':'inSide','tablet-portrait':'inSide','mobile-landscape':'inSide','mobile-portrait':'inSide']]" data-phantom="1" data-position="right">
@@ -161,26 +121,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 
 			<div class="editorElement layer-type-block ui-droppable block-4">
 
-				<div class="layout column layout_16">
-				<!-- <div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
-					<div class="inner just-phone">
-						<label class="cell-icon" for="tg-phones-9">
-							<div class="icon"></div>
-						</label>
-						<input id="tg-phones-9" class="tgl-but" type="checkbox">
-						<div class="block-body-drop">
-							<div class="cell-text">
-								<div class="title opacity"><div class="align-elem">Ответим на все ваши вопросы</div></div>
-								<div class="text_body">
-									<div class="align-elem">
-										<div><p>8-800-600-18-18</p></div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div> -->
-			</div>
+				<div class="layout column layout_16"></div>
 
 			<div class="layout column layout_8" >
 				<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget" href="#take-consultation" ><span>Рассчитать стоимость</span></a>
@@ -351,6 +292,33 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 
 
 			<div class="d-none">
+
+				<form class="popup-form zoom-anim-dialog form white-bg" id="take-information">
+					<div class="success">
+						<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
+					</div>
+					<h4>Позвоните нам, для бесплатной консультации</h4>
+					<span>
+						<a href="tel:+7 (4212) 69-81-00"><svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>+7 (4212) 69-81-00</a>
+					</span>
+					<p>Или оставьте заявку и наш менеджер <br>свяжется с вами</p>
+					<!-- Hidden Required Fields -->
+					<input type="hidden" name="project_name" value="КПД-100">
+					<input type="hidden" name="form_subject" value="КПД-100 | Заявка на консультацию">
+					<!-- END Hidden Required Fields -->
+					<div class="inputs">
+						<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
+						<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
+						<input class="input" type="text" name="email" placeholder="E-mail" required>
+					</div>
+					<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
+					<div class="confirm">
+						<input class="checkbox" type="checkbox" checked required />
+						<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
+					</div>
+				</form>
+
+
 				<div id="take-consultation" class="popup-window zoom-anim-dialog">
 
 					<div class="success">
@@ -397,57 +365,6 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 				</div>
 			</div>
 
-
-			<!-- Yandex.Metrika counter -->
-			<script type="text/javascript" >
-				(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-					m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-				(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-				ym(57525343, "init", {
-					clickmap:true,
-					trackLinks:true,
-					accurateTrackBounce:true,
-					webvisor:true
-				});
-			</script>
-			<noscript><div><img src="https://mc.yandex.ru/watch/57525343" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-			<!-- /Yandex.Metrika counter -->
-
-
-			<!-- Replace Phone Number -->
-			<script type="text/javascript">
-				(function ct_load_script() {
-					var ct = document.createElement('script'); ct.type = 'text/javascript';
-					ct.src = document.location.protocol+'//cc.calltracking.ru/phone.fa91b.9328.async.js?nc='+Math.floor(new Date().getTime()/300000);
-					var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ct, s);
-				})();
-			</script>
-			<!-- Replace Phone Number -->
-			
-
-			<!-- assets.bottom -->
-			<script src="//cdn.callibri.ru/callibri.js" type="text/javascript" charset="utf-8"></script>
-			<script src="site.min.js@1557895225" type="text/javascript" ></script>
-			<script src="defender.min.js@1557895225" type="text/javascript" ></script>
-			<script type="text/javascript" >/*<![CDATA[*/
-			$ite.start({"sid":2350529,"vid":2368879,"aid":2808709,"cp":3,"active":"0","domain":"2340896.3.oml.ru","lang":"ru","trusted":true,"debug":false});
-			/*]]>*/</script>
-			<!-- /assets.bottom -->
-
 		</body>
 
 		</html>
-
-
-		
-		
-
-		<script>
-
-			if (document.cookie.indexOf('hide_price') != -1) {
-				S3SolutionsPanel.prototype.options.price = '';	
-			}
-
-		</script>
-
