--- a/app/blog.html
+++ b/app/blog.html
@@ -8,77 +8,41 @@
 	<title>Наши статьи | КПД-100 Завод домокомплектов</title>
 	<meta name="description" content="Жители Хабаровска, в том числе и строители обращают внимание на то, как мы строим наш дом.">
 	<meta name="keywords" content="Новости">
-	<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta name="msapplication-tap-highlight" content="no"/>
-	<meta name="format-detection" content="telephone=no">
-	<meta http-equiv="x-rim-auto-match" content="none">
-	<link rel="stylesheet" href="styles_articles_tpl.css">
-	<link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="designblock.scss.css">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+	<link rel="stylesheet" href="title.styles.css?v=2.4">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="title.styles.css?v=3.1">
-	<link rel="stylesheet" href="css/main.min.css?v=3.1">
+	<link rel="stylesheet" href="css/main.min.css?v=2.5">
 	<!-- CUSOM CSS CODE -->
-
-	<link rel="stylesheet" href="s3_styles.scss.css">
-	<script src="jquery.min.js"></script>
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.2"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=2.7"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
-	<link rel='stylesheet' type='text/css' href='highslide.min.css'/>
-	<!--[if IE 6]>
-	<link rel='stylesheet' type='text/css' href='/shared/highslide-4.1.13/highslide-ie6.css'/>
-<![endif]-->
-	<!--[if lte IE 7 ]>
-	<link rel='stylesheet' type='text/css' href='/shared/highslide-4.1.13/style1_ie.css'/>
-<![endif]-->
-<script type='text/javascript' src='highslide-full.packed.js'></script>
-<script type='text/javascript'>
-	hs.graphicsDir = './shared/highslide-4.1.13/graphics/';
-	hs.outlineType = null;
-	hs.showCredits = false;
-hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кликните чтобы отменить',focusTitle:'Нажмите чтобы перенести вперёд',fullExpandTitle:'Увеличить',fullExpandText:'Полноэкранный',previousText:'Предыдущий',previousTitle:'Назад (стрелка влево)',nextText:'Далее',nextTitle:'Далее (стрелка вправо)',moveTitle:'Передвинуть',moveText:'Передвинуть',closeText:'Закрыть',closeTitle:'Закрыть (Esc)',resizeTitle:'Восстановить размер',playText:'Слайд-шоу',playTitle:'Слайд-шоу (пробел)',pauseText:'Пауза',pauseTitle:'Приостановить слайд-шоу (пробел)',number:'Изображение %1/%2',restoreTitle:'Нажмите чтобы посмотреть картинку, используйте мышь для перетаскивания. Используйте клавиши вперёд и назад'};</script>
-<script type='text/javascript' src='flowplayer-3.2.9.min.js'></script>
-<!-- 46b9544ffa2e5e73c3c971fe2ede35a5 -->
-<link rel='stylesheet' type='text/css' href='calendar.css' />
-<script type='text/javascript' src='ru.js'></script>
-<script type='text/javascript' src='cookie.js'></script>
-<script type='text/javascript' src='widgets.js@v=8'></script>
-<script type='text/javascript' src='calendar.packed.js'></script>
-<link href="jquery-ui.css" rel="stylesheet" type="text/css"/>
-<script src="jquery-ui.min.js" type="text/javascript"></script>
-<script src="jquery.ui.datepicker-ru.js"></script>
-<link rel="stylesheet" href="jquery.popover.css">
-<script src="jquery.popover.min.js" type="text/javascript"></script>
-<script src="s3.form.js" type="text/javascript"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-<script type="text/javascript" src="main.js"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script type="text/javascript" src="title.js"></script>
+	<link rel="stylesheet" href="styles.css?v=4.2">
+	
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+			m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-<!--[if lt IE 10]> <script src="/g/libs/ie9-svg-gradient/0.0.1/ie9-svg-gradient.min.js"></script> <script src="/g/libs/jquery-placeholder/2.0.7/jquery.placeholder.min.js"></script> <script src="/g/libs/jquery-textshadow/0.0.1/jquery.textshadow.min.js"></script> <script src="/g/s3/misc/ie/0.0.1/ie.js"></script> <![endif]-->
-<!--[if lt IE 9]> <script src="/g/libs/html5shiv/html5.js"></script> <![endif]-->
+		ym(57525343, "init", {
+			clickmap:true,
+			trackLinks:true,
+			accurateTrackBounce:true,
+			webvisor:true
+		});
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/57525343" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-	(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-		m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-	(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-	ym(57525343, "init", {
-		clickmap:true,
-		trackLinks:true,
-		accurateTrackBounce:true,
-		webvisor:true
-	});
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/57525343" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+	<script src="//code-ya.jivosite.com/widget/ztIhj2B2eb" async></script>
 
 </head>
 
@@ -229,7 +193,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-11/blog-page-11_1.png" height="150" width="250" alt="blog-page-11_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-11/blog-page-11_1_sm.png" height="150" width="250" alt="blog-page-11_1.jpg" class="img-responsive">
 									<b><a href="blog-page-11.html">В стоимость нашего дома входит ВСЁ!</a></b>
 									<br/><br/>
 								</li>
@@ -249,7 +213,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-10/blog-page-10_1.jpg" height="150" width="250" alt="blog-page-10_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-10/blog-page-10_1_sm.jpg" height="150" width="250" alt="blog-page-10_1.jpg" class="img-responsive">
 									<b><a href="blog-page-10.html">ДОМ ИЛИ КВАРТИРА В ИПОТЕКУ 2%</a></b>
 									<br/><br/>
 								</li>
@@ -269,7 +233,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-9/blog-page-9_1.png" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-9/blog-page-9_1_sm.png" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
 									<b><a href="blog-page-9.html">НАША ТЕХНОЛОГИЯ</a></b>
 									<br/><br/>
 								</li>
@@ -289,7 +253,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-8/blog-page-8_1.jpg" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-8/blog-page-8_1_sm.jpg" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
 									<b><a href="blog-page-8.html">10 ДНЕЙ МЫ СТРОИМ НАШ ШОУРУМ</a></b>
 									<br/><br/>
 								</li>
@@ -309,7 +273,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-7/blog-page-7_1.jpg" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-7/blog-page-7_1_sm.jpg" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
 									<b><a href="blog-page-7.html">СТРОИМ ВТОРОЙ ШОУРУМ «КПД-100»</a></b>
 									<br/><br/>
 								</li>
@@ -329,7 +293,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-6/blog-page-6_1.jpg" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-6/blog-page-6_1_sm.jpg" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
 									<b><a href="blog-page-6.html">ИПОТЕКА 2% НА СВОЙ ДОМ С «КПД-100»</a></b>
 									<br/><br/>
 								</li>
@@ -349,7 +313,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-5/blog-page-5_1.jpg" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-5/blog-page-5_1_sm.jpg" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
 									<b><a href="blog-page-5.html">ПОЧЕМУ ДОМА ОТ «КПД-100» САМЫЕ НАДЁЖНЫЕ?</a></b>
 									<br/><br/>
 								</li>
@@ -369,7 +333,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-4/blog-page-4_1.jpg" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-4/blog-page-4_1_sm.jpg" height="150" width="250" alt="blog-page-4_1.jpg" class="img-responsive">
 									<b><a href="blog-page-4.html">7 ВИДОВ УСЛУГ ДЛЯ ТЕХ, КТО СТРОИТ ДОМ</a></b>
 									<br/><br/>
 								</li>
@@ -389,7 +353,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-3/blog-page-3_1.jpg"  height="150" width="250"alt="blog-page-3_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-3/blog-page-3_1_sm.jpg"  height="150" width="250"alt="blog-page-3_1.jpg" class="img-responsive">
 									<b><a href="blog-page-3.html">ГОТОВЫЙ ДОМ ПО ЦЕНЕ КВАРТИРЫ ЗА МЕСЯЦ</a></b>
 									<br/><br/>
 								</li>
@@ -409,7 +373,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-2/blog-page-2_1.jpg" height="150" width="250" alt="blog-page-2_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-2/blog-page-2_1_sm.jpg" height="150" width="250" alt="blog-page-2_1.jpg" class="img-responsive">
 									<b><a href="blog-page-2.html">ОСОБЕННОСТИ ТЕХНОЛОГИЙ «КПД-100»</a></b>
 									<br/><br/>
 								</li>
@@ -429,7 +393,7 @@ hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кл
 						<div style="border-bottom: 3px dashed #cacaca;">
 							<ul>
 								<li>
-									<img src="img/blog/blog-page-1/blog-page-1_1.jpg " height="150" width="250" alt="blog-page-1_1.jpg" class="img-responsive">
+									<img src="img/blog/blog-page-1/blog-page-1_1_sm.jpg " height="150" width="250" alt="blog-page-1_1.jpg" class="img-responsive">
 									<b><a href="blog-page-1.html">ПЕРВЫЙ ЗАВОД ДОМОКОМПЛЕКТОВ НА ДАЛЬНЕМ ВОСТОКЕ</a></b>
 									<br/><br/>
 								</li>
