--- a/app/kontakty.html
+++ b/app/kontakty.html
@@ -10,88 +10,41 @@
 	<meta name="description" content="Строим быстровозводимые дома из металлоконструкций. Гарантия на наши дома от 50 лет. Строительная компания КПД-100
 	Завод домокомплектов предлагает для Вас дома от 2,1 млн руб!">
 	<meta name="keywords" content="Контакты">
-
-	<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-
-	<meta name="msapplication-tap-highlight" content="no"/>
-	<meta name="format-detection" content="telephone=no">
-	<meta http-equiv="x-rim-auto-match" content="none">
-	<link rel="stylesheet" href="styles_articles_tpl.css">
-	<link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="designblock.scss.css">
-	<link rel="stylesheet" href="s3_styles.scss.css">
+	<link rel="stylesheet" href="title.styles.css?v=2.4">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=2.8">
+	<link rel="stylesheet" href="css/main.min.css?v=2.7">
 	<!-- CUSOM CSS CODE -->
 
-	<script src="jquery.min.js"></script>
+	<!-- CUSTOM JS CODE -->
+	<script type="text/javascript" src="js/scripts.min.js?v=2.7"></script>
+	<!-- CUSTOM JS CODE -->
+
 	<script src="adaptiveimage.js"></script>
-	<link rel='stylesheet' type='text/css' href='highslide.min.css'/>
-<!--[if IE 6]>
-<link rel='stylesheet' type='text/css' href='/shared/highslide-4.1.13/highslide-ie6.css'/>
-<![endif]-->
-<!--[if lte IE 7 ]>
-<link rel='stylesheet' type='text/css' href='/shared/highslide-4.1.13/style1_ie.css'/>
-<![endif]-->
-<script type='text/javascript' src='highslide-full.packed.js'></script>
-<script type='text/javascript'>
-	hs.graphicsDir = './shared/highslide-4.1.13/graphics/';
-	hs.outlineType = null;
-	hs.showCredits = false;
-hs.lang={cssDirection:'ltr',loadingText:'Загрузка...',loadingTitle:'Кликните чтобы отменить',focusTitle:'Нажмите чтобы перенести вперёд',fullExpandTitle:'Увеличить',fullExpandText:'Полноэкранный',previousText:'Предыдущий',previousTitle:'Назад (стрелка влево)',nextText:'Далее',nextTitle:'Далее (стрелка вправо)',moveTitle:'Передвинуть',moveText:'Передвинуть',closeText:'Закрыть',closeTitle:'Закрыть (Esc)',resizeTitle:'Восстановить размер',playText:'Слайд-шоу',playTitle:'Слайд-шоу (пробел)',pauseText:'Пауза',pauseTitle:'Приостановить слайд-шоу (пробел)',number:'Изображение %1/%2',restoreTitle:'Нажмите чтобы посмотреть картинку, используйте мышь для перетаскивания. Используйте клавиши вперёд и назад'};</script>
-<script type='text/javascript' src='flowplayer-3.2.9.min.js'></script>
-<!-- 46b9544ffa2e5e73c3c971fe2ede35a5 -->
-<link rel='stylesheet' type='text/css' href='calendar.css' />
-<script type='text/javascript' src='ru.js'></script>
-<script type='text/javascript' src='cookie.js'></script>
-<script type='text/javascript' src='widgets.js@v=8'></script>
-<script type='text/javascript' src='calendar.packed.js'></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script type="text/javascript" src="title.js"></script>
+	<link rel="stylesheet" href="styles.css?v=4.2">
+	
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+			m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-<!--s3_require-->
-<link rel="stylesheet" href="pages.additional.1.0.css" type="text/css"/>
-<script type="text/javascript" src="pages.additional.1.0.js"></script>
-<!--/s3_require-->
+		ym(57525343, "init", {
+			clickmap:true,
+			trackLinks:true,
+			accurateTrackBounce:true,
+			webvisor:true
+		});
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/57525343" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 
-<link href="jquery-ui.css" rel="stylesheet" type="text/css"/>
-
-<script src="jquery-ui.min.js" type="text/javascript"></script>
-<script src="jquery.ui.datepicker-ru.js"></script>
-
-<link rel="stylesheet" href="jquery.popover.css">
-
-<script src="jquery.popover.min.js" type="text/javascript"></script>
-
-<script src="s3.form.js" type="text/javascript"></script>
-
-<!-- CUSTOM JS CODE -->
-<script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
-<script type="text/javascript" src="js/scripts.min.js?v=2.5"></script>
-<!-- CUSTOM JS CODE -->
-
-<script type="text/javascript" src="main.js"></script>
-
-<!--[if lt IE 10]> <script src="/g/libs/ie9-svg-gradient/0.0.1/ie9-svg-gradient.min.js"></script> <script src="/g/libs/jquery-placeholder/2.0.7/jquery.placeholder.min.js"></script> <script src="/g/libs/jquery-textshadow/0.0.1/jquery.textshadow.min.js"></script> <script src="/g/s3/misc/ie/0.0.1/ie.js"></script> <![endif]-->
-<!--[if lt IE 9]> <script src="/g/libs/html5shiv/html5.js"></script> <![endif]-->
-
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-	(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-		m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-	(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-	ym(57525343, "init", {
-		clickmap:true,
-		trackLinks:true,
-		accurateTrackBounce:true,
-		webvisor:true
-	});
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/57525343" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+	<script src="//code-ya.jivosite.com/widget/ztIhj2B2eb" async></script>
 
 </head>
 
